--- a/style.css
+++ b/style.css
@@ -106,6 +106,20 @@ h2{
 .project{
     margin-left: 8%;
 }
+.footer{
+    width: 100%;
+    height: 120px;
+    background-color: black;
+    text-align: center;
+}
+.footer-text{
+    color: white;
+    padding-top: 20px;
+}
+.footer-text p{
+    color: rgb(212, 204, 204);
+    font-size: 10px;
+}
 
 
 
